kubes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-django
  labels:
    app: monitoring
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: monitoring
        part: django
    spec:
      containers:
        - name: gunicorn
          image: as207960/monitoring-django:(version)
          command: ["gunicorn", "-w", "8", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--log-level=debug", "--timeout=90", "as207960_monitoring.wsgi:application"]
          ports:
            - containerPort: 8000
          envFrom: *env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-celery
  labels:
    app: monitoring
    part: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring
      part: celery
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: monitoring
        part: celery
    spec:
      containers:
        - name: celery
          image: as207960/monitoring-django:(version)
          command: ["celery",  "-A", "as207960_monitoring", "worker", "--loglevel=INFO", "-c", "4"]
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-django
  labels:
    app: monitoring
    part: django
spec:
  selector:
    app: monitoring
    part: django
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-django
spec:
  podSelector:
    matchLabels:
      app: monitoring
      part: django
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-celery
spec:
  podSelector:
    matchLabels:
      app: monitoring
      part: celery
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - monitoring.glauca.digital
      secretName: monitoring-tls
  rules:
    - host: monitoring.glauca.digital
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-django
                port:
                  number: 8000
